--- a/style.css
+++ b/style.css
@@ -26,13 +26,22 @@
     line-height: 3rem;
     text-align: center;
     font-family: sans-serif;
+    border: 1px solid black;
+    color: black;
+    text-decoration: none;
 }
 
 .cell {
-    border-left: none;
     text-transform: uppercase;
     font-size: 30px;
-    border: 1px solid black;
+}
+
+.selected.active {
+    background: grey;
+}
+
+.selected {
+    background: rgb(197, 197, 197);
 }
 
 .question {
@@ -40,41 +49,6 @@
     font-size: 12px;
 }
 
-.word {
-    margin: 10px;
-    display: inline-block;
-}
-
-.word.vertical {
-    width: 3rem;
-}
-
-.word.vertical .cell {
-    border-left: 1px solid black;
-    border-top: none;
-}
-
-.word:after {
-    display: table;
-    content: '';
-    clear: both;
-}
-
-.word.active {
-    background: #ebebeb;
-}
-
 .done {
     background: lightblue;
-}
-
-.word.active .cell.active {
-    background: grey;
-}
-
-
-#debug {
-    padding: 10px;
-    border: 1px solid red;
-    margin: 10px 0;
 }
