--- a/style.css
+++ b/style.css
@@ -17,12 +17,11 @@
 
 .cell,
 .question {
-    width: 3rem;
-    height: 3rem;
-    line-height: 3em;
+    width: 4rem;
+    height: 4rem;
+    line-height: 4rem;
     display: inline-block;
     vertical-align: middle;
-    line-height: 3rem;
     text-align: center;
     font-family: sans-serif;
     border: 1px solid black;
@@ -34,6 +33,8 @@
     position: relative;
     background: lightgrey;
     font-size: 10px;
+    line-height: inherit;
+    padding: 4px;
 }
 
 .question:before {
