--- a/style.css
+++ b/style.css
@@ -142,25 +142,6 @@ body {
     background-image: url("data:image/svg+xml;charset=UTF-8, %3csvg width='48' height='48' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48' %3e%3cpolyline points='0,48, 8,24, 12,24' style='stroke: %23000; stroke-width:2; fill:none'/%3e%3cpolygon points='12,20 19,24 12,28' style='stroke:%23000; fill:%23000'/%3e%3c/svg%3e");
 }
 
-
-
-/* -------------------------- */
-
-.arrow-prev:before {
-    background-image: url("data:image/svg+xml;charset=UTF-8, %3csvg width='48' height='48' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48' %3e%3cpolyline points='48,48, 32,24, 40,24' style='stroke: %23000; stroke-width:2; fill:none'/%3e%3cpolygon points='38,20 45,24 38,28' style='stroke:%23000; fill:%23000'/%3e%3c/svg%3e");
-}
-
-.arrow-equal:before {
-    background-image: url("data:image/svg+xml;charset=UTF-8, %3csvg width='48' height='48' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48' %3e%3cpolyline points='8,48, 8,24, 12,24' style='stroke: %23000; stroke-width:2; fill:none'/%3e%3cpolygon points='12,20 19,24 12,28' style='stroke:%23000; fill:%23000'/%3e%3c/svg%3e");
-}
-
-.arrow-next:before {
-    background-image: url("data:image/svg+xml;charset=UTF-8, %3csvg width='48' height='48' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48' %3e%3cpolyline points='0,48, 8,24, 12,24' style='stroke: %23000; stroke-width:2; fill:none'/%3e%3cpolygon points='12,20 19,24 12,28' style='stroke:%23000; fill:%23000'/%3e%3c/svg%3e");
-}
-
-
-/* -------------------------- */
-
 .selected.active {
     background: grey;
 }
@@ -171,4 +152,12 @@ body {
 
 .done {
     background: lightblue;
+}
+
+.done.selected {
+    background: rgb(73, 192, 231);
+}
+
+.done.active {
+    background: rgb(0, 117, 156);
 }
