--- a/style.css
+++ b/style.css
@@ -9,9 +9,7 @@ body {
 }
 
 .container {
-    border: 1px dashed grey;
-    padding: 20px;
-    margin: 0 auto;
+    text-align: center;
 }
 
 .scanword-wrap {
@@ -162,5 +160,21 @@ body {
     background: rgb(0, 117, 156);
 }
 
-#inp {
+.counter {
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.icon-done {
+    opacity: 0;
+}
+
+.counter.done {
+    color: green;
+}
+
+.counter.done .icon-done {
+    opacity: 1;
 }
