--- a/style.css
+++ b/style.css
@@ -178,3 +178,13 @@ body {
 .counter.done .icon-done {
     opacity: 1;
 }
+
+#inp {
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    border: none;
+}
